--- a/Desktop/MyProject/frontend/package.json
+++ b/Desktop/MyProject/frontend/package.json
@@ -12,9 +12,11 @@
     "@googlemaps/js-api-loader": "^1.16.3",
     "@types/google.maps": "^3.55.3",
     "bootstrap": "^5.3.2",
+    "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
