--- a/Desktop/MyProject/frontend/package.json
+++ b/Desktop/MyProject/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.3",
     "@types/google.maps": "^3.55.3",
+    "antd": "^5.15.2",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "framer-motion": "^11.0.6",
