--- a/Desktop/MyProject/backend/package.json
+++ b/Desktop/MyProject/backend/package.json
@@ -16,11 +16,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-jwt": "^8.4.1",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.0",
     "googleapis": "^133.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
-    "multer": "^1.4.5-lts.1"
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
