--- a/Desktop/MyProject/frontend/package.json
+++ b/Desktop/MyProject/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "framer-motion": "^11.0.6",
+    "jwt-decode": "^4.0.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
