--- a/Desktop/MyProject/frontend/package.json
+++ b/Desktop/MyProject/frontend/package.json
@@ -19,7 +19,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-intersection-observer": "^9.8.1"
+    "react-intersection-observer": "^9.8.1",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "@types/node": "^20",
